add ibid heuristic slides

--- a/defense-p0-intro.tex
+++ b/defense-p0-intro.tex
@@ -4,6 +4,7 @@
 \begin{frame}
    \frametitle{Autonomous Manipulation Tasks}
    \begin{tikzpicture}
+      \tikzset{>=latex} % arrow heads
       \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
    
       \node[inner sep=0] at ( 2,5.0) {\includegraphics[width=3.5cm]{images/herb.jpg}};
