--- a/defense-p6-conclusion.tex
+++ b/defense-p6-conclusion.tex
@@ -3,12 +3,13 @@
 
    Summary of contributions:
    \begin{itemize}
-   \item {\bf LazySP} algorithm for graphs with expensive edge evaluations
-   \item {\bf IBiD} algorithm for incremental bidirectional search
-   \item {\bf LEMUR} algorithm for motion planning with utility functions
-   \item {\bf C-space family decomposition} for multi-step planning tasks
+   \pause \item {\bf LazySP} algorithm for graphs with expensive edge evaluations
+   \pause \item {\bf IBiD} algorithm for incremental bidirectional search
+   \pause \item {\bf LEMUR} algorithm for motion planning with utility functions
+   \pause \item {\bf C-space family decomposition} for multi-step planning tasks
    \end{itemize}
 
+   \pause
    Code is available:
    \begin{itemize}
    \item {\tt http://lemur-planning.readthedocs.io}
