--- a/defense-p1-utility.tex
+++ b/defense-p1-utility.tex
@@ -56,7 +56,7 @@
       \node at (4,5) {\includegraphics{build/pvx-graph}};
 
       \node[fill=blue!5,align=center] at (9,5.5) {
-         $A_1$, $A_2$: two example invocations\\
+         $A_1$, $A_2$: planner invocations\\
          $A_3$: a parameterized planner\\
          $A_4$: an anytime planner};
 
