--- a/defense.tex
+++ b/defense.tex
@@ -113,15 +113,15 @@
 
 \input{defense-p1-utility}
 
-\input{defense-p2-lazysp}
+%\input{defense-p2-lazysp}
 
-\input{defense-p3-ibid}
+%\input{defense-p3-ibid}
 
-\input{defense-p4-utility-results}
+%\input{defense-p4-utility-results}
 
-\input{defense-p5-family}
+%\input{defense-p5-family}
 
-\input{defense-p6-conclusion}
+%\input{defense-p6-conclusion}
 
 {
 \setbeamercolor{background canvas}{bg=black}
